third_party/rust/paste/tests/ui/unsupported-literal.stderr
error: unsupported literal
 --> $DIR/unsupported-literal.rs:2:10
  |
2 |     fn [<1e+100>]() {}
  |          ^^^^^^
