third_party/rust/paste/tests/ui/unsupported-literal.rs
paste::item! {
    fn [<1e+100>]() {}
}

fn main() {}
